--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
       content="אתר שנוצר כי היה לי משעמם | kfirGamesYT#7005"
     />
     <link rel="apple-touch-icon" href="/en-he/logo192.png" />
-    <link rel="manifest" href="/en-he/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -851,8 +851,8 @@
       crossorigin="anonymous"
     />
     <title>EN - HE &gt; אנגלית לעברית</title>
-    <script defer="defer" src="/en-he/static/js/main.8e7327a2.js"></script>
-    <link href="/en-he/static/css/main.d3574d41.css" rel="stylesheet" />
+    <script defer="defer" src="main.8e7327a2.js"></script>
+    <link href="main.d3574d41.css" rel="stylesheet" />
     <style data-emotion="css" data-s=""></style>
     <style>
       @font-face {
