--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
       name="description"
       content="אתר שנוצר כי היה לי משעמם | kfirGamesYT#7005"
     />
-    <link rel="apple-touch-icon" href="/en-he/logo192.png" />
+    <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="manifest.json" />
     <link
       rel="stylesheet"
