--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
               class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary css-wzo29t"
             >
               <span class="MuiChip-label MuiChip-labelMedium css-9iedg7"
-                >שלום = auko</span
+                >שלום = akuo</span
               >
             </div>
             <div
